# naive_shell

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  command.hpp  editor.cpp  editor.hpp  main.cpp  makefile  proc_status.hpp  shell.cpp  shell.hpp  signal_stack.hpp  trie_tree.cpp  trie_tree.hpp  virtual_editor.hpp
doc/: backend.md  frontend.md
doc/third/: signal_stack.md  trie_tree.md
include/: backend.hpp  command.hpp  editor.hpp  frontend.hpp  job.hpp  shell.hpp  virtual_backend.hpp  virtual_editor.hpp  virtual_frontend.hpp
include/res/: const_message.hpp
include/utils/: file_system.hpp  output.hpp  proc_status.hpp
src/: CMakeLists.txt  backend.cpp  command.cpp  editor.cpp  frontend.cpp  job.cpp  main.cpp  shell.cpp
src/utils/: file_system.cpp  output.cpp  proc_status.cpp
third/: CMakeLists.txt
third/file_system/: file_system.cpp  file_system.hpp  makefile
third/output/: makefile  output.cpp  output.hpp
third/proc_status/: makefile  proc_status.cpp  proc_status.hpp
third/signal_stack/: makefile  signal_stack.cpp  signal_stack.hpp
third/trie_tree/: makefile  trie_tree.cpp  trie_tree.hpp
